fix: Resource leak in Storage.java copyFile() method
- Wrap FileInputStream/FileOutputStream in try-with-resources
- Prevents file handle leaks